# rips

./: Cargo.toml  README.md  rustfmt.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/ethernet/: mod.rs  rx.rs
packets/: Cargo.toml  README.md
packets/examples/: arp_request.rs  basic.rs
packets/src/: arp.rs  ip.rs  ipv4.rs  ipv6.rs  lib.rs  macros.rs  types.rs
packets/src/ethernet/: macaddr.rs  mod.rs
rips-packets/: Cargo.toml
rips-packets/benches/: packet_headers.rs
rips-packets/examples/: arp_request.rs  basic.rs
rips-packets/src/: arp.rs  ethernet.rs  ipv4.rs  lib.rs  macaddr.rs  macros.rs
